kustomize/base/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  annotations:
    cloud.google.com/backend-config: '{"default": "grafana-backendconfig"}'
spec:
  selector:
    app: grafana
    department: grafana
  ports:
  - name: grafana
    port: 3000
    targetPort: 3000
